# impact-iran-war-living-standards

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.jsx  page.jsx
dashboard/public/data/: iran_impact_results.json
dashboard/src/components/: MethodologyTab.jsx  PolicyTab.jsx  QuintileTargetingChart.jsx  ScenariosTab.jsx
dashboard/src/lib/: colors.js  dataHelpers.js  formatters.js  scenarioContent.js
src/iran_impact/: __init__.py  cli.py  config.py  pipeline.py
