[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-price-shock-impact"
version = "0.1.0"
description = "Analysis of how energy price shocks would impact UK living standards using PolicyEngine microsimulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "microdf-python",
]

[project.optional-dependencies]
uk = [
  "policyengine-uk>=2.75.2",
  "microimpute",
]
simulation = [
  "policyengine-uk>=2.75.2",
  "microimpute",
]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iran_impact"]

[tool.pytest.ini_options]
testpaths = ["tests"]
